--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/main.css">
-<script src="http://www.w3schools.com/lib/w3data.js"></script>
+<script src="https://www.w3schools.com/lib/w3data.js"></script>
 <!--#include virtual="navigation.ssi" -->
 <div w3-include-html="menubar.html"></div> 
 <script>
