--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <!--#include virtual="navigation.ssi" -->
 <div w3-include-html="menubar.html"></div> 
 <script>
+  function scrollToTop() { 
+            window.scrollTo(0, 0); 
+        } 
 w3IncludeHTML();
+scrollToTop();
 </script>
 </head>
 
