update index footer

--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@ scrollToTop();
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_rX7WCR35VjavTDtQbQ_DbNH4n6NfUGCvPiRFSd__R0ciMQ/viewform?embedded=true" width="640" height="1317" frameborder="0" marginheight="0" marginwidth="0">Laden…</iframe>
 </div>
 
+<div w3-include-html="footer.html"></div> 
+
 </body>
 </html>
