--- a/Overstappen/systemenaanelkaarkoppelen.html
+++ b/Overstappen/systemenaanelkaarkoppelen.html
@@ -9,7 +9,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/main.css">
-<script src="website/js/w3data.js"></script>
+<script src="/website/js/w3data.js"></script>
 <!--#include virtual="navigation.ssi" -->
 <div w3-include-html="menubar.html"></div> 
 <script>
