fix linking system
fix het linking systeem en gebruik urls ipv locaties in sitemap

--- a/Overstappen/systemenaanelkaarkoppelen.html
+++ b/Overstappen/systemenaanelkaarkoppelen.html
@@ -8,17 +8,17 @@
 <title>ScriptSupporter</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/main.css">
-<script src="/website/js/w3data.js"></script>
+<link rel="stylesheet" href="https://scriptsupporter.com/css/main.css">
+<script src="https://scriptsupporter.com/js/w3data.js"></script>
 <!--#include virtual="navigation.ssi" -->
-<div w3-include-html="menubar.html"></div> 
+<div w3-include-html="https://scriptsupporter.com/includes/menubar.html"></div> 
 <script>
 window.scrollTo(0, 0); 
 w3IncludeHTML();
 </script>
 </head>
 
-<div w3-include-html="footer.html"></div> 
+<div w3-include-html="https://scriptsupporter.com/includes/footer.html"></div> 
 
 </body>
 </html>
