--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/main.css">
-<script src="js/w3data.js"></script>
+<script src="https://scriptsupporter.com/js/w3data.js"></script>
 <!--#include virtual="navigation.ssi" -->
-<div w3-include-html="menubar.html"></div> 
+<div w3-include-html="https://scriptsupporter.com/includes/menubar.html"></div> 
 <script>
 window.scrollTo(0, 0); 
 w3IncludeHTML();
@@ -56,7 +56,7 @@ w3IncludeHTML();
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_rX7WCR35VjavTDtQbQ_DbNH4n6NfUGCvPiRFSd__R0ciMQ/viewform?embedded=true" width="640" height="1317" frameborder="0" marginheight="0" marginwidth="0">Laden…</iframe>
 </div>
 
-<div w3-include-html="footer.html"></div> 
+<div w3-include-html="https://scriptsupporter.com/includes/footer.html"></div> 
 
 </body>
 </html>
