--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>ScriptSupporter</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="https://scriptsupporter.com/css/main.css">
 <script src="https://scriptsupporter.com/js/w3data.js"></script>
 <!--#include virtual="navigation.ssi" -->
 <div w3-include-html="https://scriptsupporter.com/includes/menubar.html"></div> 
