update colors en images

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ w3IncludeHTML();
   <div class="side">
     <div class="grid-row col-3">
       <div onclick="window.location.href = 'GoogleAppScript/overGoogleAppScript.html';" class="grid-unit">
-        <img href="google.com" src="http://placehold.it/650x300/ff694d/f6f2eb"/>
-        <p>Nullam quis risus eget urna mollis ornare vel eu leo. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. </p>
+        <img href="google.com" src="images/Googleappimage.jpg"/>
+        <p>Google Apps Script is een programeertaal die standaard in bijna elke Google service is ingebouwd en kan worden gebruikt voor scripts en kleine applicaties. Hierdoor kan het verschilende services aan elkaar linken. Maar het kan ook bijvoorbeeld andere platformen met Google services verbinden. Hierdoor zijn er oneidige mogelijkheden voor automatisering</p>
       </div>
       <div onclick="window.location.href = 'Onderwijs/watwijkunnen.html';" class="grid-unit">
-        <img src="http://placehold.it/650x300/ff694d/f6f2eb"/>
-        <p>Nullam quis risus eget urna mollis ornare vel eu leo. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. </p>
+        <img src="images/Googleclassroomimage.jpg"/>
+        <p>Wij kunnen scholen helpen met de overstap maken naar digitaal onderwijs en helpen met het opzetten van een digitale leeromgeving. </p>
       </div>
       
       <div onclick="window.location.href = 'Overstappen/digitaliseren.html';" class="grid-unit">
