--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@ w3IncludeHTML();
   <div class="side">
     <div class="grid-row col-3">
       <div onclick="window.location.href = 'GoogleAppScript/overGoogleAppScript.html';" class="grid-unit">
-        <img href="google.com" src="images/Googleappimage.jpg"/>
-        <p>Google Apps Script is een programeertaal die standaard in bijna elke Google service is ingebouwd en kan worden gebruikt voor scripts en kleine applicaties. Hierdoor kan het verschilende services aan elkaar linken. Maar het kan ook bijvoorbeeld andere platformen met Google services verbinden. Hierdoor zijn er oneidige mogelijkheden voor automatisering</p>      <div onclick="window.location.href = 'Onderwijs/watwijkunnen.html';" class="grid-unit">
- <img src="images/Googleclassroomimage.jpg"/>
+        <img href="google.com" src="images/Googleappimage.png"/>
+        <p>Google Apps Script is een programeertaal die standaard in bijna elke Google service is ingebouwd en kan worden gebruikt voor scripts en kleine applicaties. Hierdoor kan het verschilende services aan elkaar linken. Maar het kan ook bijvoorbeeld andere platformen met Google services verbinden. Hierdoor zijn er oneidige mogelijkheden voor automatisering</p>
+      </div>
+      <div onclick="window.location.href = 'Onderwijs/watwijkunnen.html';" class="grid-unit">
+        <img src="images/Googleclassroomimage.png"/>
         <p>Wij kunnen scholen helpen met de overstap maken naar digitaal onderwijs en helpen met het opzetten van een digitale leeromgeving. </p>
       </div>
       
