--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ w3IncludeHTML();
       </div>
       
       <div onclick="window.location.href = 'Overstappen/digitaliseren.html';" class="grid-unit">
-        <img src="http://placehold.it/650x300/ff694d/f6f2eb"/>
-        <p>Nullam quis risus eget urna mollis ornare vel eu leo. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. </p>
+        <img src="images/digitaliseren.jpg"/>
+        <p>Wij helpen bedrijven met de overstap maken naar meer digitaal werken en het vernieuwen van systemen</p>
       </div>
 
 
