--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ w3IncludeHTML();
       
       <div onclick="window.location.href = 'Overstappen/digitaliseren.html';" class="grid-unit">
         <img src="images/digitaliseren.jpg"/>
-        <p>Wij helpen bedrijven met de overstap maken naar meer digitaal werken en het vernieuwen van systemen</p>
+        <p>Wij helpen bedrijven met de overstap maken naar meer digitaal werken en het vernieuwen van systemen.</p>
       </div>
 
 
@@ -48,9 +48,10 @@ w3IncludeHTML();
 </div>
 
 
-  <h1>voorbeeld</h1>
+  <h1>Over ons</h1>
   <div class="centered-text">
-  <p>Voorbeeld</p>
+  <p>Gaandeweg is gebleken dat er nog maar weinig bekend is over de vele mogelijkheden die Google scripts, G-Suite en Google Classroom bieden. Om onze kennis te delen en beschikbaar te stellen voor anderen zijn wij dit bedrijf gestart.
+</p>
 </div>
 <div class="centered-googleform">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_rX7WCR35VjavTDtQbQ_DbNH4n6NfUGCvPiRFSd__R0ciMQ/viewform?embedded=true" width="640" height="1317" frameborder="0" marginheight="0" marginwidth="0">Laden…</iframe>
