--- a/GoogleAppScript/GoogleAppScript.html
+++ b/GoogleAppScript/GoogleAppScript.html
@@ -4,6 +4,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" type="image/png" href="https://scriptsupporter.com/images/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="https://scriptsupporter.com/images/favicon-16x16.png" sizes="16x16" />
 <head>
 <title>ScriptSupporter</title>
 <meta charset="UTF-8">
