--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" type="image/png" href="https://scriptsupporter.com/images/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="https://scriptsupporter.com/images/favicon-16x16.png" sizes="16x16" />
 <head>
 <title>ScriptSupporter</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://scriptsupporter.com/css/main.css">
 <script src="https://scriptsupporter.com/js/w3data.js"></script>
-<!--#include virtual="navigation.ssi" -->
 <div w3-include-html="https://scriptsupporter.com/includes/menubar.html"></div> 
 <script>
+
+
 window.scrollTo(0, 0); 
 w3IncludeHTML();
 </script>
 </head>
 
 <div class="header">
+
   <h1>ScriptSupporter</h1>
 </div>
 
