update voeg logo toe aan home

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ w3IncludeHTML();
 </head>
 
 <div class="header">
-
+  <img href="google.com" src="images/logo.png"/>
   <h1>ScriptSupporter</h1>
 </div>
 
