engelse versie van de site

--- a/en/GoogleAppScript/sheets.html
+++ b/en/GoogleAppScript/sheets.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="nl">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -13,16 +13,14 @@
 <link rel="stylesheet" href="https://scriptsupporter.com/css/main.css">
 <script src="https://scriptsupporter.com/js/w3data.js"></script>
 <!--#include virtual="navigation.ssi" -->
-<div w3-include-html="https://scriptsupporter.com/includes/menubar.html"></div> 
+<div w3-include-html="https://scriptsupporter.com/en/includes/menubar.html"></div> 
 <script>
 window.scrollTo(0, 0); 
 w3IncludeHTML();
 </script>
 </head>
 
-<div w3-include-html="https://scriptsupporter.com/includes/footer.html"></div> 
+<div w3-include-html="https://scriptsupporter.com/en/includes/footer.html"></div> 
 
 </body>
 </html>
-
-
