--- a/en/index.html
+++ b/en/index.html
@@ -28,18 +28,18 @@ w3IncludeHTML();
 <div class="row">
   <div class="side">
     <div class="grid-row col-3">
-      <div onclick="window.location.href = 'https://scriptsupporter.com/GoogleAppScript/overGoogleAppScript.html';" class="grid-unit">
+      <div onclick="window.location.href = 'https://scriptsupporter.com/en/GoogleAppScript/overGoogleAppScript.html';" class="grid-unit">
         <img href="google.com" src="https://scriptsupporter.com/images/Googleappimage.png"/>
-        <p>Google Apps Script is een programeertaal die standaard in bijna elke Google service is ingebouwd en kan worden gebruikt voor scripts en kleine applicaties. Hierdoor kan het verschilende services aan elkaar linken. Maar het kan ook bijvoorbeeld andere platformen met Google services verbinden. Hierdoor zijn er oneidige mogelijkheden voor automatisering</p>
+        <p>Google Apps Script is a programming language that is built into almost every Google service by default and can be used for scripts and small applications. This allows it to link different services together. But it can also connect other platforms to Google services, for example. This means there are endless possibilities for automation</p>
       </div>
-      <div onclick="window.location.href = 'https://scriptsupporter.com/Onderwijs/watwijkunnen.html';" class="grid-unit">
+      <div onclick="window.location.href = 'https://scriptsupporter.com/en/Onderwijs/watwijkunnen.html';" class="grid-unit">
         <img src="https://scriptsupporter.com/images/Googleclassroomimage.png"/>
-        <p>Wij kunnen scholen helpen met de overstap maken naar digitaal onderwijs en helpen met het opzetten van een digitale leeromgeving. </p>
+        <p>We can help schools make the transition to digital education and help set up a digital learning environment.</p>
       </div>
       
-      <div onclick="window.location.href = 'https://scriptsupporter.com/Overstappen/digitaliseren.html';" class="grid-unit">
+      <div onclick="window.location.href = 'https://scriptsupporter.com/en/Overstappen/digitaliseren.html';" class="grid-unit">
         <img src="https://scriptsupporter.com/images/digitaliseren.jpg"/>
-        <p>Wij helpen bedrijven met de overstap maken naar meer digitaal werken en het vernieuwen van systemen.</p>
+        <p>We help companies make the transition to working more digitally and renew systems.</p>
       </div>
 
 
@@ -51,14 +51,12 @@ w3IncludeHTML();
 </div>
 
 
-  <h1>Over ons</h1>
+  <h1>About us</h1>
   <div class="centered-text">
-  <p>Gaandeweg is gebleken dat er nog maar weinig bekend is over de vele mogelijkheden die Google scripts, G-Suite en Google Classroom bieden. Om onze kennis te delen en beschikbaar te stellen voor anderen zijn wij dit bedrijf gestart.
+  <p>Gradually it turned out that little is known about the many possibilities that Google scripts, G-Suite and Google Classroom offer. We started this company to share our knowledge and make it available to others.
 </p>
 </div>
-<div class="centered-googleform">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_rX7WCR35VjavTDtQbQ_DbNH4n6NfUGCvPiRFSd__R0ciMQ/viewform?embedded=true" width="640" height="1317" frameborder="0" marginheight="0" marginwidth="0">Laden…</iframe>
-</div>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdVZ-Xgbvt5G1PKEXzZgW1RQ5ADzh8jLLHHWLrxw6Lo-jF49w/viewform?embedded=true" width="640" height="1313" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 <div w3-include-html="https://scriptsupporter.com/includes/footer.html"></div> 
 
