--- a/en/index.html
+++ b/en/index.html
@@ -12,7 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://scriptsupporter.com/css/main.css">
 <script src="https://scriptsupporter.com/js/w3data.js"></script>
-<div w3-include-html="https://scriptsupporter.com/includes/en/menubar.html"></div> 
+<div w3-include-html="https://scriptsupporter.com/en/includes/menubar.html"></div> 
 <script>
 
 
@@ -58,7 +58,7 @@ w3IncludeHTML();
 </div>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdVZ-Xgbvt5G1PKEXzZgW1RQ5ADzh8jLLHHWLrxw6Lo-jF49w/viewform?embedded=true" width="640" height="1313" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
-<div w3-include-html="https://scriptsupporter.com/includes/en/footer.html"></div> 
+<div w3-include-html="https://scriptsupporter.com/en/includes/footer.html"></div> 
 
 </body>
 </html>
