--- a/en/index.html
+++ b/en/index.html
@@ -56,7 +56,9 @@ w3IncludeHTML();
   <p>Gradually it turned out that little is known about the many possibilities that Google scripts, G-Suite and Google Classroom offer. We started this company to share our knowledge and make it available to others.
 </p>
 </div>
+<div class="centered-googleform">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdVZ-Xgbvt5G1PKEXzZgW1RQ5ADzh8jLLHHWLrxw6Lo-jF49w/viewform?embedded=true" width="640" height="1313" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
 
 <div w3-include-html="https://scriptsupporter.com/en/includes/footer.html"></div> 
 
